# t82-accelero

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
.github/matrices/: cmake-flags.json
application/inc/: error_base.h  t82_accelero_flags.h
application/src/: main.c
drivers/components/inc/: fxls89xxxx_driver_flags.h
drivers/components/src/: fxls89xxxx_hw.c
drivers/device/inc/: stm32l0xx_device_flags.h
drivers/peripherals/inc/: i2c_address.h  mcu_mapping.h  nvic_priority.h  stm32l0xx_drivers_flags.h
drivers/peripherals/src/: mcu_mapping.c
drivers/registers/inc/: stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h
script/: git_version.sh  t82_accelero_hw1-0.jlink  t82_accelero_hw1-0_debug.launch  t82_accelero_hw1-0_run.launch
